# deps_jmc

./: CMakeLists.txt
resources/: env.bat  installer.json  installer.xsl  installer_env.xsl  jmc.ini  jmc.product  mirror-2019-09.xml  mirror-babel-2019-06.xml  mirror-babel-oxygen.xml  mirror-babel-photon.xml  mirror-photon.xml  platform-definition-2019-09.target  platform-definition-photon.target
